Removed unnecessary setting